filtered ve content kismi yapildi

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-HTML 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,9 +19,50 @@ HTML
         <div class="main">
             <div class="filter-part">
                 <!-- Furkan -->
+                <ul class="filter-right-section">
+                    <li>
+                        <button class="filter-buton rotate"><i class="fa-solid fa-chart-bar"></i></button>
+                    </li>
+                    <li>
+                        <button class="filter-buton"><i class="fa-solid fa-bars"></i></button>
+                    </li>
+                    <li>
+                        <button class="filter-buton"><i class="fa-solid fa-dollar-sign"></i></button>
+                    </li>
+                    <li>
+                        <button class="filter-buton green-buton">+ Anlaşma</button>
+                    </li>
+                </ul>
             </div>
             <div class="content-status">
                 <!-- Sare -->
+                <div class="section">
+                    <ul class="project qualified">
+                        <h3>Değerlendirilen</h3>
+                        <p class="project-total">₺<span class="total">0</span></p>
+                        <button class="project-add">+</button>
+                    </ul>
+                    <ul class="project contact-made">
+                        <h3>İletişim Kuruldu</h3>
+                        <p class="project-total">₺<span class="total">0</span></p>
+                        <button class="project-add">+</button>
+                    </ul>
+                    <ul class="project demo-scheduled">
+                        <h3>Demo Planlandı</h3>
+                        <p class="project-total">₺<span class="total">0</span></p>
+                        <button class="project-add">+</button>
+                    </ul>
+                    <ul class="project proposal-made">
+                        <h3>Teklif Sunuldu</h3>
+                        <p class="project-total">₺<span class="total">0</span></p>
+                        <button class="project-add">+</button>
+                    </ul>
+                    <ul class="project negatiations-started">
+                        <h3>Görüşmeler Başladı</h3>
+                        <p class="project-total">₺<span class="total">0</span></p>
+                        <button class="project-add">+</button>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
