--- a/index.html
+++ b/index.html
@@ -10,94 +10,95 @@
     <script src="assets/js/main.js" defer></script>
 </head>
 <body>
-    <div class="left-nav">
-        <ul class="left-nav-ul">
-            <li class="menu-item" >
-                <a class="menu-item-link" href="#/pipeline" aria-label="home">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" class="icon"><path d="M20.05 9.61c0 3.93-2.53 6.62-6.15 6.62-1.73 0-3.15-.71-3.68-1.6l.03.91v5.63h-3.7V6.62c0-.2-.05-.25-.28-.25H5v-3.1h3.1c1.41 0 1.77 1.23 1.87 1.76.56-.94 2.02-2.03 4.1-2.03 3.58 0 5.98 2.66 5.98 6.61Zm-3.77.03c0-2.1-1.37-3.55-3.1-3.55-1.41 0-3.01.94-3.01 3.58 0 1.72.96 3.52 2.96 3.52 1.48 0 3.15-1.07 3.15-3.55Z"></path></svg>
-                </a>
-            </li>
-            <li class="menu-item active">
-                <a data-source="fe-root" class="menu-item-link" href="#anlasmalar" aria-label="Anlaşma">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" class="icon"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm-.72 16v-1.04c-.67-.1-1.2-.32-1.6-.58-.5-.33-.77-.71-.92-.94-.22-.35-.1-.82.24-1.03.35-.22.82-.12 1.04.24.07.12.2.3.47.48.25.16.68.34 1.37.38h.13c1.23-.04 1.84-.77 1.84-1.39 0-.2-.04-.32-.1-.42-.06-.12-.17-.25-.4-.43-.36-.28-.63-.36-1.22-.55l-.28-.1-.37-.1-.1-.02c-.17-.04-.38-.1-.6-.19-.25-.1-.51-.23-.7-.34-.13-.07-.26-.15-.38-.24-.33-.25-.6-.54-.79-.9-.19-.37-.26-.75-.26-1.15 0-1.46 1.18-2.49 2.6-2.8V6c0-.41.34-.75.75-.75s.75.34.75.75v.85c.66.1 1.17.31 1.57.57.5.33.77.72.92.94.22.35.1.82-.24 1.04-.35.22-.82.1-1.04-.24-.07-.12-.2-.31-.47-.48-.25-.17-.68-.35-1.37-.39H12c-1.22.05-1.86.8-1.86 1.39 0 .22.04.35.1.46.05.1.15.23.34.39l.04.03.2.1c.16.1.34.2.5.26.13.05.26.09.43.13l.08.02.47.13.27.08c.58.19 1.11.36 1.7.81.31.25.59.52.79.87.2.36.28.75.28 1.16 0 1.45-1.15 2.5-2.57 2.8V18c0 .41-.34.75-.75.75-.42 0-.75-.34-.75-.75Z"></path></svg>
-                </a>
-                <div class="tooltip">Anlaşmalar <span>2</span></div>
-
-            </li>
-        </ul>
-    </div>
-    <div class="content">
-        <div class="nav">
-            <div class="left-title">
-                <h1>Anlaşma</h1>
-            </div>
-            <div class="center-nav">
-                <input autocomplete="off" class="searchInput" name="search" id="search" value="" placeholder="Pipedrive'ı Ara">
-                <div class="searchIcon">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="secondary" class="scope"><path d="M17.5 10.5c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7 7-3.13 7-7Zm-1.54 6.52C14.48 18.25 12.58 19 10.5 19 5.8 19 2 15.2 2 10.5S5.8 2 10.5 2 19 5.8 19 10.5c0 2.08-.75 3.98-1.98 5.46l4.76 4.76c.3.3.3.77 0 1.06-.3.3-.77.3-1.06 0l-4.76-4.76Z"></path></svg>
+    <div class="container">
+        <div class="left-nav">
+            <ul class="left-nav-ul">
+                <li class="menu-item" >
+                    <a class="menu-item-link" href="#/pipeline" aria-label="home">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" class="icon"><path d="M20.05 9.61c0 3.93-2.53 6.62-6.15 6.62-1.73 0-3.15-.71-3.68-1.6l.03.91v5.63h-3.7V6.62c0-.2-.05-.25-.28-.25H5v-3.1h3.1c1.41 0 1.77 1.23 1.87 1.76.56-.94 2.02-2.03 4.1-2.03 3.58 0 5.98 2.66 5.98 6.61Zm-3.77.03c0-2.1-1.37-3.55-3.1-3.55-1.41 0-3.01.94-3.01 3.58 0 1.72.96 3.52 2.96 3.52 1.48 0 3.15-1.07 3.15-3.55Z"></path></svg>
+                    </a>
+                </li>
+                <li class="menu-item active">
+                    <a data-source="fe-root" class="menu-item-link" href="#anlasmalar" aria-label="Anlaşma">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" class="icon"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm-.72 16v-1.04c-.67-.1-1.2-.32-1.6-.58-.5-.33-.77-.71-.92-.94-.22-.35-.1-.82.24-1.03.35-.22.82-.12 1.04.24.07.12.2.3.47.48.25.16.68.34 1.37.38h.13c1.23-.04 1.84-.77 1.84-1.39 0-.2-.04-.32-.1-.42-.06-.12-.17-.25-.4-.43-.36-.28-.63-.36-1.22-.55l-.28-.1-.37-.1-.1-.02c-.17-.04-.38-.1-.6-.19-.25-.1-.51-.23-.7-.34-.13-.07-.26-.15-.38-.24-.33-.25-.6-.54-.79-.9-.19-.37-.26-.75-.26-1.15 0-1.46 1.18-2.49 2.6-2.8V6c0-.41.34-.75.75-.75s.75.34.75.75v.85c.66.1 1.17.31 1.57.57.5.33.77.72.92.94.22.35.1.82-.24 1.04-.35.22-.82.1-1.04-.24-.07-.12-.2-.31-.47-.48-.25-.17-.68-.35-1.37-.39H12c-1.22.05-1.86.8-1.86 1.39 0 .22.04.35.1.46.05.1.15.23.34.39l.04.03.2.1c.16.1.34.2.5.26.13.05.26.09.43.13l.08.02.47.13.27.08c.58.19 1.11.36 1.7.81.31.25.59.52.79.87.2.36.28.75.28 1.16 0 1.45-1.15 2.5-2.57 2.8V18c0 .41-.34.75-.75.75-.42 0-.75-.34-.75-.75Z"></path></svg>
+                    </a>
+                    <div class="tooltip">Anlaşmalar <span>2</span></div>
+                </li>
+            </ul>
+        </div>
+        <div class="content">
+            <div class="nav">
+                <div class="left-title">
+                    <h1>Anlaşma</h1>
                 </div>
+                <div class="center-nav">
+                    <input autocomplete="off" class="searchInput" name="search" id="search" value="" placeholder="Pipedrive'ı Ara">
+                    <div class="searchIcon">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="secondary" class="scope"><path d="M17.5 10.5c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7 7-3.13 7-7Zm-1.54 6.52C14.48 18.25 12.58 19 10.5 19 5.8 19 2 15.2 2 10.5S5.8 2 10.5 2 19 5.8 19 10.5c0 2.08-.75 3.98-1.98 5.46l4.76 4.76c.3.3.3.77 0 1.06-.3.3-.77.3-1.06 0l-4.76-4.76Z"></path></svg>
+                    </div>
+                </div>
+                <div class="right-nav">
+                    <ul class="right-nav-list">
+                        <li>
+                            <button class="myApps"><i class="fa-solid fa-puzzle-piece"></i></button>
+                        </li>
+                        <li>
+                            <button class="quickHelp"><i class="fa-regular fa-circle-question"></i></button>
+                        </li>
+                        <li>
+                            <button class="salesAssist"><i class="fa-regular fa-lightbulb"></i></button>
+                        </li>
+                    </ul>
+                </div>
+            
             </div>
-            <div class="right-nav">
-                <ul class="right-nav-list">
-                    <li>
-                        <button class="myApps"><i class="fa-solid fa-puzzle-piece"></i></button>
-                    </li>
-                    <li>
-                        <button class="quickHelp"><i class="fa-regular fa-circle-question"></i></button>
-                    </li>
-                    <li>
-                        <button class="salesAssist"><i class="fa-regular fa-lightbulb"></i></button>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        </div>
-        <div class="main">
-            <div class="filter-part">
-                <!-- Furkan -->
-                <ul class="filter-right-section">
-                    <li>
-                        <button class="filter-buton rotate"><i class="fa-solid fa-chart-bar"></i></button>
-                    </li>
-                    <li>
-                        <button class="filter-buton"><i class="fa-solid fa-bars"></i></button>
-                    </li>
-                    <li>
-                        <button class="filter-buton"><i class="fa-solid fa-dollar-sign"></i></button>
-                    </li>
-                    <li>
-                        <button class="filter-buton green-buton">+ Anlaşma</button>
-                    </li>
-                </ul>
-            </div>
-            <div class="content-status">
-                <!-- Sare -->
-                <div class="section">
-                    <ul class="project qualified">
-                        <h3>Değerlendirilen</h3>
-                        <p class="project-total">₺<span class="total">0</span></p>
-                        <button class="project-add">+</button>
+            <div class="main">
+                <div class="filter-part">
+                    <!-- Furkan -->
+                    <ul class="filter-right-section">
+                        <li>
+                            <button class="filter-buton rotate"><i class="fa-solid fa-chart-bar"></i></button>
+                        </li>
+                        <li>
+                            <button class="filter-buton"><i class="fa-solid fa-bars"></i></button>
+                        </li>
+                        <li>
+                            <button class="filter-buton"><i class="fa-solid fa-dollar-sign"></i></button>
+                        </li>
+                        <li>
+                            <button class="filter-buton green-buton">+ Anlaşma</button>
+                        </li>
                     </ul>
-                    <ul class="project contact-made">
-                        <h3>İletişim Kuruldu</h3>
-                        <p class="project-total">₺<span class="total">0</span></p>
-                        <button class="project-add">+</button>
-                    </ul>
-                    <ul class="project demo-scheduled">
-                        <h3>Demo Planlandı</h3>
-                        <p class="project-total">₺<span class="total">0</span></p>
-                        <button class="project-add">+</button>
-                    </ul>
-                    <ul class="project proposal-made">
-                        <h3>Teklif Sunuldu</h3>
-                        <p class="project-total">₺<span class="total">0</span></p>
-                        <button class="project-add">+</button>
-                    </ul>
-                    <ul class="project negatiations-started">
-                        <h3>Görüşmeler Başladı</h3>
-                        <p class="project-total">₺<span class="total">0</span></p>
-                        <button class="project-add">+</button>
-                    </ul>
+                </div>
+                <div class="content-status">
+                    <!-- Sare -->
+                    <div class="section">
+                        <ul class="project qualified">
+                            <h3>Değerlendirilen</h3>
+                            <p class="project-total">₺<span class="total">0</span></p>
+                            <button class="project-add">+</button>
+                        </ul>
+                        <ul class="project contact-made">
+                            <h3>İletişim Kuruldu</h3>
+                            <p class="project-total">₺<span class="total">0</span></p>
+                            <button class="project-add">+</button>
+                        </ul>
+                        <ul class="project demo-scheduled">
+                            <h3>Demo Planlandı</h3>
+                            <p class="project-total">₺<span class="total">0</span></p>
+                            <button class="project-add">+</button>
+                        </ul>
+                        <ul class="project proposal-made">
+                            <h3>Teklif Sunuldu</h3>
+                            <p class="project-total">₺<span class="total">0</span></p>
+                            <button class="project-add">+</button>
+                        </ul>
+                        <ul class="project negatiations-started">
+                            <h3>Görüşmeler Başladı</h3>
+                            <p class="project-total">₺<span class="total">0</span></p>
+                            <button class="project-add">+</button>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
