content classinda duzenlemeler yapildi.

--- a/index.html
+++ b/index.html
@@ -73,31 +73,36 @@
                 <div class="content-status">
                     <!-- Sare -->
                     <div class="section">
-                        <ul class="project qualified">
+                        <div class="project qualified">
                             <h3>Değerlendirilen</h3>
                             <p class="project-total">₺<span class="total">0</span></p>
                             <button class="project-add">+</button>
-                        </ul>
-                        <ul class="project contact-made">
+                            <ul class="product"></ul>
+                        </div>
+                        <div class="project contact-made">
                             <h3>İletişim Kuruldu</h3>
                             <p class="project-total">₺<span class="total">0</span></p>
                             <button class="project-add">+</button>
-                        </ul>
-                        <ul class="project demo-scheduled">
+                            <ul class="product"></ul>
+                        </div>
+                        <div class="project demo-scheduled">
                             <h3>Demo Planlandı</h3>
                             <p class="project-total">₺<span class="total">0</span></p>
                             <button class="project-add">+</button>
-                        </ul>
-                        <ul class="project proposal-made">
+                            <ul class="product"></ul>
+                        </div>
+                        <div class="project proposal-made">
                             <h3>Teklif Sunuldu</h3>
                             <p class="project-total">₺<span class="total">0</span></p>
                             <button class="project-add">+</button>
-                        </ul>
-                        <ul class="project negatiations-started">
+                            <ul class="product"></ul>
+                        </div>
+                        <div class="project negatiations-started">
                             <h3>Görüşmeler Başladı</h3>
                             <p class="project-total">₺<span class="total">0</span></p>
                             <button class="project-add">+</button>
-                        </ul>
+                            <ul class="product"></ul>
+                        </div>
                     </div>
                 </div>
             </div>
