Filter sections lara yeni spanler acildi.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="main">
                 <div class="filter-part">
                     <!-- Furkan -->
-                    <ul class="filter-right-section">
+                    <ul class="filter-left-section">
                         <li>
                             <button class="filter-buton rotate"><i class="fa-solid fa-chart-bar"></i></button>
                         </li>
@@ -69,6 +69,9 @@
                             <button class="filter-buton green-buton">+ Anlaşma</button>
                         </li>
                     </ul>
+                    <div class="filter-right-section">
+                        <span class="totalProjectCost"></span>.<span class="totalProjectAmount"></span>
+                    </div>
                 </div>
                 <div class="content-status">
                     <!-- Sare -->
