fetch islemi ve html css duzenlemesi yapildi

--- a/index.html
+++ b/index.html
@@ -85,26 +85,35 @@
                         <div class="project contact-made">
                             <h3>İletişim Kuruldu</h3>
                             <p class="project-total">₺<span class="total">0</span></p>
+                            <ul class="products">
+                                <!-- <li class="deal">
+                                    <h4><span class="company">bilmem ne</span> anlaşması</h4>
+                                    <div class="detail">
+                                        <span class="company">bilmem ne</span>,<span id="contact">furkan</span>
+                                    </div>
+                                    <span id="cost">₺5</span>
+                                </li> -->
+                            </ul>
                             <button class="project-add">+</button>
-                            <ul class="product"></ul>
+                            
                         </div>
                         <div class="project demo-scheduled">
                             <h3>Demo Planlandı</h3>
                             <p class="project-total">₺<span class="total">0</span></p>
-                            <button class="project-add">+</button>
                             <ul class="product"></ul>
+                            <button class="project-add">+</button>
                         </div>
                         <div class="project proposal-made">
                             <h3>Teklif Sunuldu</h3>
                             <p class="project-total">₺<span class="total">0</span></p>
-                            <button class="project-add">+</button>
                             <ul class="product"></ul>
+                            <button class="project-add">+</button>
                         </div>
                         <div class="project negatiations-started">
                             <h3>Görüşmeler Başladı</h3>
                             <p class="project-total">₺<span class="total">0</span></p>
-                            <button class="project-add">+</button>
                             <ul class="product"></ul>
+                            <button class="project-add">+</button>
                         </div>
                     </div>
                 </div>
