dialog dinamik hale getirildi duzenlemeler yapildi

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="assets/js/main.js" defer></script>
 </head>
 <body>
-    <dialog open class="dialog">
+    <dialog class="dialog">
         <form method="post">
             <div class="form-header">
                 <h3>Anlaşma Ekle</h3>
