--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                 </label>
                 <label>
                     <h4>Email</h4>
-                    <input required type="text" id="phone" name="phone" value="">
+                    <input required type="text" id="email" name="email" value="">
                 </label>
             </div>  
             
             <div class="form-footer">
-                <button class="filter-buton green-buton" type="submit">Kaydet</button>
+                <button class="filter-buton green-buton" id="add-btn" type="button">Kaydet</button>
             </div>
         </form>
     </dialog>
