js icin form baglantisi kuruldu

--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
                     <!-- Furkan -->
                     <ul class="filter-left-section">
                         <li>
-                            <button class="filter-buton rotate"><i class="fa-solid fa-chart-bar"></i></button>
+                            <button class="filter-buton rotate"><a href="#/pipeline"><i class="fa-solid fa-chart-bar"></i></a></button>
                         </li>
                         <li>
-                            <button class="filter-buton"><i class="fa-solid fa-bars"></i></button>
+                            <button class="filter-buton"><a href="#/list"><i class="fa-solid fa-bars"></i></a></button>
                         </li>
                         <li>
-                            <button class="filter-buton"><i class="fa-solid fa-dollar-sign"></i></button>
+                            <button class="filter-buton"><a href="#/forecast"><i class="fa-solid fa-dollar-sign"></i></a></button>
                         </li>
                         <li>
                             <button class="filter-buton green-buton">+ Anlaşma</button>
