diolog ekraninda secilen kisiye gore kurulus secenekleri dinamiklestirildi.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                 </label>
                 <label>
                     <h4>Kuruluş</h4>
-                    <input required type="text" id="company" name="company" value="">
+                    <select required type="text" id="company" name="company" value="">
+                        <option value="" disabled selected>Seçiniz</option>
+                    </select>
                 </label>
                 <label>
                     <h4>Başlık</h4>
