--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             <button class="filter-buton"><i class="fa-solid fa-dollar-sign"></i></button>
                         </li>
                         <li>
-                            <button class="filter-buton green-buton">+ Anlaşma</button>
+                            <button class="filter-buton green-buton project-add">+ Anlaşma</button>
                         </li>
                     </ul>
                     <div class="filter-right-section">
